--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="image main"><img src="images/log.png" alt="" /></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -29,6 +29,8 @@
 							<ul>
 								<li><a href="#intro">تعريف</a></li>
 								<li><a href="#work">طبيعة العمل</a></li>
+								<li><a href="#sell">قائمة اسعار </a></li>
+								<li><a href="#data">ببانات للتواصل </a></li>
 								<li><a href="#about">دول متعامل معاها</a></li>
 								<li><a href="#contact">اتصال</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -53,6 +55,28 @@
 								<span class="image main"><img src="images/pic02.jpeg" alt="" /></span>
 								<p>نحن نعمل علي اجود انواع الجرانيت والرجام ,رخام كالسيتي , رخام صني منيا وصني فضل وصني ذهبي رخام سليفيا مصريرخام تريستا مصري رخام جلالة روز سادة رخام جلالة تايجر وجلالة فصرخام بريشيا المصري	رخام برلاتو سيسليا رخام امبرادور غامق وفاتحرخام اخضر هندي								</p>
 								<p>وايضا نعمل في جميع انواع الاجرانيت ,جاندولا ان بلاط الأرضية من جرانيت الجاندولا عبارة عن مزيج معقد من اللونين البيج والرمادي بنمط محبب. ...جراى (رمادى) الشركة يعد جرانيت جراى الشركة هو نوع من الجرانيت الرمادي الذى تقع محاجره في مصر. حلايب (بيانكو حلايب) نيو حلايب أخضرفيردى (فيردى غزال) أصفر فيردى أحمر أسوان غامق احمر رويال									.</p>
+							</article>
+
+							<article id="sell">
+								<h2 class="major">قائمة اسعار </h2>
+								<span class="image main"><img src="images/Black-Aswan-granite.jpg"alt=""/></span>
+								<p>الجرانيت الاسود الاسواني المصري وسعر المتر في هذه القطعه هو يصل 300 جنيه مصري</p>
+								<p><h3>
+									قائمة اسعار شركة Modern House <P>
+										سعر الجرانيت الاحمر الاسواني : المتر يصل الي 360 جنية مصري 
+									</P>
+								</h3>
+						</p>
+							</article>
+							<article id="data">
+								<h2 class="major">بيانات العملاء</h2>
+								<form>
+									الاسم <input type="text">
+									الجنسية <input type="text">
+									البلد <input type="text">
+									<input type="submit" value="ارسل البيانات">
+								</form>
+
 							</article>
 
 						<!-- About -->
@@ -357,3 +381,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
